﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-17
	Fixed: Some problems with the new audio management.
	Added: Volume meter, for both output and input.
### 2019-02-16
	Changed: Audio and Microphone management. Microphone manager now depends on Audio Manager to function.
	Fixed: Minor leaked bug.
### 2019-02-15
	Fixed: Microphone tab was empty if the associated component was loaded.
	Fixed: Potential massive bug if TM is used outside of Windows 7 with the experimental I/O priority enabled.
	Fixed: Microphone component fails to load if default device is not available at launch.
	Added: Microphone component detects changes to default comms device.
	Changed: Microphone component by default does NOT try to make changes.
	Added: Microphone control can be enabled and disabled in general or per microphone. Only default comm device is managed still, tho.
### 2019-02-14
	Changed: Session end behaivour extended. TM should now properly block session end briefly, with a message, to do clean shutdown.
### 2019-02-13
	Fixed: ArgumentOutOfRangeException caused by saving foreground hysterisis.
	Changed: Improved network error reporting.
	Internal: Some timer changes, should have no impact to end-users.
	Fixed: Rare assertion failure in Audio component if Process Manager has not yet been loaded and hooked into it.
### 2019-02-12
	Added: Advanced config dialog. Mostly for slowly adding missing confguration options in.
### 2019-02-11
	Fixed: Per rule log adjusts was not saved if disabled.
	Fixed: NullReferenceException & ArgumentException in relation to WinEventProc
	Fixed: Watchlist rule adjust count was not updated.
	Fixed: Path matching was broken in recent update.
	Changed: Initial component configuration detection method was not enabling the controls properly.
	Changed: Power and NVM monitors are disabled by default in initial config.