@@ -6,6 +6,8 @@ Comprehensive changes can be found in Git change history:
 ### 2019-02-17
 	Fixed: Some problems with the new audio management.
 	Added: Volume meter, for both output and input.
+	Added: Volume meter configuration.
+	Added: Various configuration options to tray context menu.
 ### 2019-02-16
 	Changed: Audio and Microphone management. Microphone manager now depends on Audio Manager to function.
 	Fixed: Minor leaked bug.
